--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             color: white;
             padding: 20px 10px;
             font-size: xx-large;
+			overflow-x: scroll;
         }
         .container {
             margin-top: 3rem;
