--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             color: white;
             padding: 20px 10px;
             font-size: xx-large;
+			display: flex;
+			align-items: center;
         }
+		img {
+		    width: 60px;
+			padding-right: 10px;
+		}
         .container {
             margin-top: 3rem;
             margin-left: auto;
@@ -95,7 +101,7 @@
         </script>
 </head>
 <body>
-    <header>Database of Lucan Manuscripts</header>
+    <header><img src="pharsalia-1.png"/>Database of Lucan Manuscripts</header>
 	<div class="container">
 
 		<p>Overview of some manuscripts containing Lucan's Pharsalia or associated texts such as pieces from the Anthologia Latina, life of Lucan, scholia, etc.</p>
