--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Database of Lucan Manuscripts</title>
 
+	<link rel="shortcut icon" type="image/x-icon" href="pharsalia-favicon.png">
+
     <style>
         body {
             margin: 0;
