--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                       {data: "contents"},
                       {data: "schema"},
                       {data: "schema-location"},
-                      {data: "anthol.lat.233"},
-                      {data: "anthol.lat.485c"},
-                      {data: "anthol.lat.668"},
-                      {data: "anthol.lat.719c"},
-                      {data: "anthol.lat.806"},
+                      {data: "anthol-lat-233"},
+                      {data: "anthol-lat-485c"},
+                      {data: "anthol-lat-668"},
+                      {data: "anthol-lat-719c"},
+                      {data: "anthol-lat-806"},
                       {data: "suetonius-vita"},
                       {data: "ps-vacca-vita"},
                       {data: "prose-argumentum"},
